# sandspiel

./: .babelrc  .firebaserc  .gitattributes  .gitignore  0.6d180195fe3f5b93a2a8.js  0.6d180195fe3f5b93a2a8.js.map  0.7583a1173db83722d563.js  0.7583a1173db83722d563.js.map  0.bundle.js  0.bundle.js.map  0.d1053d2950915126d826.js  0.d1053d2950915126d826.js.map  0.fd76afc092736d8bb9a8.js  0.fd76afc092736d8bb9a8.js.map  1.039b7dd416b88ebdcb8a.js  1.039b7dd416b88ebdcb8a.js.map  1.0bd5c25524a4a08fb94a.js  1.0bd5c25524a4a08fb94a.js.map  1.0e9b4b138f53fac8e0bc.js  1.0e9b4b138f53fac8e0bc.js.map  1.169bf0dc710cf7dd4e15.js  1.169bf0dc710cf7dd4e15.js.map  1.179d268cea0ecd97cd8f.js  1.179d268cea0ecd97cd8f.js.map  1.21f895f5d644273cf30d.js  1.21f895f5d644273cf30d.js.map  1.25934bb98997d76443f9.js  1.25934bb98997d76443f9.js.map  1.2b0eee7a50699b69d69e.js  1.2b0eee7a50699b69d69e.js.map  1.2ece45c2cfcf39082f73.js  1.2ece45c2cfcf39082f73.js.map  1.3c3b838d817ed5759f3d.js  1.3c3b838d817ed5759f3d.js.map  1.45b1871cc9f62088ff31.js  1.45b1871cc9f62088ff31.js.map  1.46d584d65ccbb6efd654.js  1.46d584d65ccbb6efd654.js.map  1.4d6bcc5d55b549ee4805.js  1.4d6bcc5d55b549ee4805.js.map  (+579 more)
.firebase/: hosting.ZGlzdA.cache
.github/: PREVIEW_DEPLOYMENTS.md
assets/: html_code.html  site.webmanifest
crate/: Cargo.toml  notes.md
crate/.cargo/: config.toml
crate/benches/: bench1.rs  benchmarks.rs
crate/src/: lib.rs  species.rs  universe.rs  utils.rs
functions/: .runtimeconfig.json  migration.ts  package-lock.json  package.json  tsconfig.json
js/: api.js  app.js  benchmark.js  boot.js  bootstrap.js  constants.js  convertSVG.js  fluid.js  fluidShaders.js  fps.js  fragment.glsl  index.js  layout.js  paint.js  render.js  styles.css  ui.js
pkg/: README.md  package-lock.json  package.json  sandtable.d.ts  sandtable.js  (+1 more)
(+65 files in other folders)
