[package]
name = "sandtable"
version = "0.1.0"
authors = ["maxbittker"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.7"
wasm-bindgen = "0.2.42"
js-sys = "0.3.19"
rand = "0.8.3"
rand_xoshiro = "0.6.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

[dependencies.getrandom]
features = [
    "js",
]
